# handschuhnames

./: .zenodo.json  CONTRIBUTORS.md  README.md  cldfbench_handschuhnames.py  languages.geojson  metadata.json  pyproject.toml  setup.py
cldf/: README.md  cldf-metadata.json  codes.csv  languages.csv  parameters.csv  requirements.txt  sources.bib  values.csv
etc/: parameters.csv  sources.bib  sources.csv
raw/: Handschuh-Names.bib  Handschuh_Names.Tabelle1.csv  Handschuh_Names.xlsx  README.md
