[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cldfbench_handschuhnames"
dependencies = ["cldfbench[glottolog]"]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest-cldf"]

[project.entry-points."cldfbench.dataset"]
handschuhnames = "cldfbench_handschuhnames:Dataset"

[tool.setuptools]
py-modules = ["cldfbench_handschuhnames"]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["test.py"]
addopts = "--cldf-metadata=cldf/cldf-metadata.json"
